# audio-capture

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  t1.py
.github/: copilot-instructions.md
.github/workflows/: windows-build.yml
audio_tool/: __init__.py
audio_tool/audio/: __init__.py  recorder.py
audio_tool/ui/: __init__.py  main_window.py  waveform_widget.py
audio_tool/utils/: __init__.py
t/: t1.py  t2.py  t4.py  t5.py  t6.py
